# libclipboard

./: Cargo.toml
src/: lib.rs
