[package]
name = "libclipboard"
version = "0.2.1"
authors = ["ippee <ippee.music@gmail.com>","Motalleb <fmotalleb@gmail.com>"]
edition = "2018"

[lib]
name = "libclipboard"
crate-type = ["cdylib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = "0.5.0"
once_cell = "1.13.0"